added past condition and changed warning msg added moment script updated readme file changed to current date

--- a/app/index.html
+++ b/app/index.html
@@ -1,15 +1,20 @@
 <html>
-  <head>
-    <script src="https://static.freshdev.io/fdk/2.0/assets/fresh_client.js"></script>
-    <link rel="stylesheet" type="text/css" href="styles/style.css" />
-  </head>
 
-  <body>
-    <section class="app-body">
-      <img src="./styles/images/rocket.svg" alt="A rocket emoji" />
-      <p>Congratulations on buliding your first app.</p>
-      <p id="apptext"></p>
-    </section>
-  </body>
-  <script src="scripts/app.js"></script>
+<head>
+  <script src="https://static.freshdev.io/fdk/2.0/assets/fresh_client.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
+    integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <link rel="stylesheet" type="text/css" href="styles/style.css" />
+</head>
+
+<body>
+  <section class="app-body">
+    <img src="./styles/images/rocket.svg" alt="A rocket emoji" />
+    <p>Congratulations on buliding your first app.</p>
+    <p id="apptext"></p>
+  </section>
+</body>
+<script src="scripts/app.js"></script>
+
 </html>
